# energy-comparison

./: .env.template  LICENSE  README.md  compose-dev.yaml  compose.yaml
nginx/: nginx-dev.conf  nginx.conf
react-ui/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-ui/src/: App.tsx
react-ui/src/components/rating/: index.tsx
react-ui/src/components/rating/star-icon/: index.tsx
react-ui/src/components/review-modal/: index.tsx  type.ts
react-ui/src/components/reviews/: index.tsx  type.ts
react-ui/src/lib/: utils.ts
react-ui/src/pages/404/: index.tsx
react-ui/src/pages/auth/: index.tsx
react-ui/src/pages/dashboard/: dashboard.tsx
react-ui/src/sections/property/: index.tsx  type.ts
react-ui/src/sections/recommendations/: index.tsx  type.ts
react-ui/src/sections/reviews/: index.tsx  type.ts
rest-api/: Dockerfile  Dockerfile.dev  fastapi_backend.py  pyproject.toml
rest-api/src/: config.py  sessions.py
rest-api/src/dal/: recommendation.py  review.py  supplier.py  user.py
rest-api/src/models/: errors.py  review.py  user.py
rest-api/src/routers/: auth.py  core.py  profile.py  supplier.py
rest-api/src/utils/: base62.py  hash_password.py  nanoid.py
