[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Matt Crewe <matthewjcrewe@gmail.com>"]
readme = "README.md"
# packages = [{include = "fastapi_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
loguru = "^0.7.2"
cryptography = "^42.0.8"
pydantic-settings = "^2.3.1"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
dev = 'fastapi_backend:main_dev'
prod = 'fastapi_backend:main_prod'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
